--- a/resources/woi_dark/palette.css
+++ b/resources/woi_dark/palette.css
@@ -1,3 +1,13 @@
+/********************************************************************/
+/*                                                                  */
+/*         File    : palette.css                                    */
+/*         Author  : Nazuha26                                       */
+/*                                                                  */
+/*         Copyright (c) 2025 by Nazuha26                           */
+/*         All bugs are my own. Handle with care.                   */
+/*                                                                  */
+/********************************************************************/
+
 QWidget {
     color: #2F3138;   /* Window */
     color: #E6E8EA;   /* WindowText */
